--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,1 @@
-# Environment variables
-.env
-.env.local
-.env.*
-!.env.example
-
-# Dependencies
-node_modules/
-
-# Build output
-dist/
-build/
-
-# IDE and editor files
-.vscode/
-.idea/
-*.swp
-*.swo
-.DS_Store
+node_modules
