--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "firebase": "^10.0.0",
+    "lovable-tagger": "^1.0.0",
     "lucide-react": "^0.300.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.0.0",
