--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "npm run build:client && npm run build:server && npm run build:prerender",
+    "build:client": "vite build",
+    "build:server": "vite build --ssr src/entry-server.tsx --outDir dist/server",
+    "build:prerender": "node prerender",
     "build:dev": "vite build --mode development",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -21,6 +24,7 @@
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "firebase": "^10.0.0",
+    "framer-motion": "^12.11.3",
     "lucide-react": "^0.300.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.0.0",
