--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.3.0",
     "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.0.0",
     "@types/node": "^20.0.0",
@@ -23,6 +25,7 @@
     "chart.js": "^4.0.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "express": "^5.1.0",
     "firebase": "^10.0.0",
     "framer-motion": "^12.11.3",
     "lovable-tagger": "^1.1.8",
@@ -33,6 +36,7 @@
     "react-router-dom": "^6.20.0",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.3",
+    "stripe": "^18.1.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.0"
