--- a/package.json
+++ b/package.json
@@ -5,20 +5,21 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npm run build:client && npm run build:server && npm run build:prerender",
+    "build": "npm run build:client && npm run build:server && npm run build:prerender && npm run generate:sitemap",
     "build:client": "vite build",
     "build:server": "vite build --ssr src/entry-server.tsx --outDir dist/server",
     "build:prerender": "node prerender",
     "build:dev": "vite build --mode development",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate:sitemap": "node scripts/generate-sitemaps.js"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.3.0",
     "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.0.0",
-    "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "axios": "^1.6.0",
@@ -33,6 +34,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.0.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.20.0",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.3",
@@ -42,6 +44,7 @@
     "zod": "^3.22.0"
   },
   "devDependencies": {
+    "@types/node": "^22.15.18",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.0",
@@ -52,6 +55,7 @@
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "terser": "^5.39.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.0.0",
     "vite": "^5.0.0"
   }
