--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build:dev": "vite build --mode development",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "generate:sitemap": "node scripts/generate-sitemaps.js"
+    "generate:sitemap": "node scripts/generate-sitemaps.js",
+    "stripe:products": "ts-node scripts/create-stripe-products.ts"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -38,7 +39,6 @@
     "react-router-dom": "^6.20.0",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.3",
-    "stripe": "^18.1.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.0"
@@ -49,10 +49,12 @@
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.16",
+    "dotenv": "^16.5.0",
     "eslint": "^8.0.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.0",
     "postcss": "^8.4.31",
+    "stripe": "^18.1.0",
     "tailwindcss": "^3.3.5",
     "terser": "^5.39.1",
     "ts-node": "^10.9.2",
