--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.0",
     "postcss": "^8.4.31",
+    "supabase": "^2.22.12",
     "tailwindcss": "^3.3.5",
     "terser": "^5.39.1",
     "ts-node": "^10.9.2",
