--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npm run build:client && npm run build:server && npm run build:prerender && npm run generate:sitemap",
+    "build": "npm run build:client && npm run build:server && npm run build:prerender && npm run generate:site",
     "build:client": "vite build",
     "build:server": "vite build --ssr src/entry-server.tsx --outDir dist/server",
-    "build:prerender": "node prerender",
-    "build:dev": "vite build --mode development",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "generate:sitemap": "node scripts/generate-sitemaps.js"
+    "build:prerender": "node prerender.mjs",
+    "generate:site": "node generate.js",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
